--- a/README.adoc
+++ b/README.adoc
@@ -3,13 +3,13 @@ ifdef::env-github,env-browser[:relfileprefix: docs/]
 
 https://travis-ci.org/AY1920S1-CS2103-T11-3/main[image:https://travis-ci.org/AY1920S1-CS2103-T11-3/main.svg?branch=master[Build Status]]
 
-//ifdef::env-github[]
-//image::docs/images/Ui.png[width="600"]
-//endif::[]
-//
-//ifndef::env-github[]
-//image::images/Ui.png[width="600"]
-//endif::[]
+ifdef::env-github[]
+image::docs/images/Ui.png[width="600"]
+endif::[]
+
+ifndef::env-github[]
+image::images/Ui.png[width="600"]
+endif::[]
 
 A powerlifting competition consists of 3 lifts, the Squat, Bench, and Deadlift.
 With 3 attempts, athletes will try to outdo and challenge themselves and lift as heavy as they can. +
