--- a/docs/team/wongchuankai.adoc
+++ b/docs/team/wongchuankai.adoc
@@ -4,13 +4,15 @@
 :stylesDir: ../stylesheets
 
 == PROJECT: `Ezwatchlist`
+
 ---
+
 == 1. Introduction
 
 The purpose of the Project Portfolio is to document and showcase my contributions to the software project, `EzWatchList`.
 
 Our team was initially tasked with enhancing a basic command line interface(CLI) desktop application
-for our Software Engineering project. We are allowed to morph it to other application that uses command line interface.
+for our Software Engineering project. We are also allowed to morph it to other application that uses command line interface.
 Thus, we chose to morph it into a movie records management system called EzWatchList. This enhanced
 version provides a unique, clean and simple way of organizing and keeping track of movie or TV show watch list.
 
@@ -19,7 +21,7 @@ version provides a unique, clean and simple way of organizing and keeping track 
 image::Ui.png[]
 Figure 1. The graphical interface for Ezwatchlist.
 
-`EzWatchList` helps users to keep track of movie or TV show in a watch list. User can simply
+`EzWatchList` helps users to keep track and organise movie or TV show in a watch list. User can simply
 interact with the application by inputting commands into the interface.
 
 Main features of EzWatchList:
@@ -153,6 +155,7 @@ My contributions to EzWatchList can be found in the following link: [https://nus
 features. They showcase my ability to write documentation targeting end-users._
 |===
 
+include::../UserGuide.adoc[tag=addfirst]
 include::../UserGuide.adoc[tag=addsecond]
 include::../UserGuide.adoc[tag=sync]
 
@@ -167,8 +170,7 @@ and the technical depth of my software engineering skills to the project._
 include::../DeveloperGuide.adoc[tag=add]
 include::../DeveloperGuide.adoc[tag=sync]
 
-== PROJECT: PowerPointLabs
+
 
 ---
 
-_{Optionally, you may include other projects in your portfolio.}_
